--- a/Othello.cbp
+++ b/Othello.cbp
@@ -9,9 +9,8 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/Othello" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -36,6 +35,7 @@
 		<Unit filename="GameObjects/Board.hpp" />
 		<Unit filename="GameObjects/Piece.hpp" />
 		<Unit filename="GameObjects/Slot.hpp" />
+		<Unit filename="JukeBox.cpp" />
 		<Unit filename="JukeBox.hpp" />
 		<Unit filename="StateManager.cpp" />
 		<Unit filename="StateManager.hpp" />
